--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "babel-eslint": "^8.2.5",
     "broccoli-plugin": "^1.3.1",
     "console-ui": "^2.2.2",
-    "dummy-addon": "link:tests/dummy-addon",
-    "dummy-less-addon": "link:tests/dummy-less-addon",
-    "dummy-sass-addon": "link:tests/dummy-sass-addon",
+    "dummy-addon": "file:tests/dummy-addon",
+    "dummy-less-addon": "file:tests/dummy-less-addon",
+    "dummy-sass-addon": "file:tests/dummy-sass-addon",
     "ember-ajax": "^3.1.0",
     "ember-cli": "~3.4.1",
     "ember-cli-addon-tests": "^0.11.0",
@@ -59,7 +59,7 @@
     "qunit-dom": "^0.7.1",
     "qunitjs": "^2.4.1",
     "sinon": "^4.3.0",
-    "template-stuff": "link:tests/dummy/lib/template-stuff",
+    "template-stuff": "file:tests/dummy/lib/template-stuff",
     "webpack": "^4.17.2"
   },
   "keywords": [
